--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   </head>
   <body>
     <div id="root"></div>
+
+
+    <footer class="footer">
+       <p class="copy">Developed by: Per'Man :)</p>
+     <div class="redes">
+        <a href="https://github.com/perman03"><img class="redes__icono" src="src/icons/github.png" alt="icono github"></a>
+        <a href="https://www.linkedin.com/in/franco-uriel-p%C3%A9rez-mancilla/"><img class="redes__icono" src="src/icons/linkedin.png" alt="icono linkedin"></a>
+        <a href="https://www.instagram.com/frankp.ux/"><img class="redes__icono"  src="src/icons/instagram.png" alt="icono instagram"></a>
+     </div>
+    
+    </footer>
+
+
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
